--- a/inventory.yml
+++ b/inventory.yml
@@ -2,25 +2,25 @@
 managers:
   hosts:
     manager1: 
-      ansible_host: x.x.x.x
+      ansible_host: 192.168.99.132
     manager2: 
-      ansible_host: x.x.x.x
+      ansible_host: 192.168.99.35
     manager3: 
-      ansible_host: x.x.x.x
+      ansible_host: 192.168.99.110
 
 # Swarm workers
 workers:
   hosts:
     worker1:
       ansible_host: x.x.x.x
-    worker2:
-      ansible_host: x.x.x.x
-    worker3:
-      ansible_host: x.x.x.x
-    worker4:
-      ansible_host: x.x.x.x 
-    worker5:
-      ansible_host: x.x.x.x
+    # worker2:
+    #   ansible_host: x.x.x.x
+    # worker3:
+    #   ansible_host: x.x.x.x
+    # worker4:
+    #   ansible_host: x.x.x.x 
+    # worker5:
+    #   ansible_host: x.x.x.x
 
 # Swarm nodes
 swarm:
